# Skeleton

./: CMakeLists.txt  Readme.md
doc/: Readme.md
macros/: Readme.md
scripts/: ExampleProcessor.xml  Readme.md
source/: CMakeLists.txt
source/include/: ExampleProcessor.h
source/src/: ExampleProcessor.cc
